# stereo_localization

./: .gitignore  CMakeLists.txt  package.xml
config/: rviz.rviz
include/: CamLocalization.h  ImuState.h  MapPublisher.h  types_imu.h
include/DepthEstimation/: DepthMap.h
include/GlobalMapping/: g2oTypeSim3Sophus.h
include/util/: globalFuncs.h
src/: CamLocalization.cpp  ImageDisplay_OpenCV.cpp  MapPublisher.cpp  main.cpp  types_imu.cpp
src/DataStructures/: Frame.cpp
src/DepthEstimation/: DepthMap.cpp  DepthMapPixelHypothesis.cpp
src/Tracking/: Relocalizer.cpp  SE3Tracker.cpp  Sim3Tracker.cpp  TrackingReference.cpp
